<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/idAdminRutasBuses"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/horario_icon"
        android:title="@string/rutas_buses" />
    <item
        android:id="@+id/idAdminVisualizarBuses"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/ubicacion_buses_icon"
        android:title="@string/ubicacion_buses" />
    <item
        android:id="@+id/idEditarHorarios"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/editarhorario_icon"
        android:title="@string/editar_horario" />
    <item
        android:id="@+id/idAdminAgregarHorario"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/agregarhorario_icon"
        android:title="@string/agregar_horario" />
    <item
        android:id="@+id/idAdminListaReporte"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/listareportes_icon"
        android:title="@string/lista_reportes" />
    <item
        android:id="@+id/idAdminCerrarSesion"
        android:checkable="true"
        android:checked="true"
        android:icon="@drawable/cerrarsesion_icon"
        android:title="@string/cerrar_sesion" />
</menu>