<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".iniciar_sesion">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="259dp"
            android:layout_height="161dp"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/login" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:padding="3dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:tint="@color/hint_color"
                    app:srcCompat="@drawable/user_icon"
                    app:tintMode="src_in" />

                <EditText
                    android:id="@+id/editTextText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/username"
                    android:inputType="text|textEmailAddress"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/hint_color"
                    android:textColorHint="@color/hint_color" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="1dp">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:tint="@color/hint_color"
                    app:srcCompat="@drawable/password_icon" />

                <EditText
                    android:id="@+id/idEditTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_marginLeft="2dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="text|textPassword"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/hint_color"
                    android:textColorHint="@color/hint_color" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp">

            <CheckBox
                android:id="@+id/idCheckboxShowPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mostrar_contraseña"
                android:textColor="@color/hint_color"
                android:textColorHighlight="@color/hint_color"
                android:textColorHint="@color/hint_color"
                android:textColorLink="@color/hint_color"
                app:buttonTint="@color/hint_color" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:onClick="onOlvidadoClick"
                android:text="@string/forgot"
                android:textColor="@color/forgot"
                android:textColorHighlight="@color/forgot" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/log_in"
            android:textSize="18sp"
            android:onClick="onIniciarSesionClick"
            app:backgroundTint="@color/fondo"
            app:icon="@drawable/logo"
            app:iconTint="@color/fondo"
            app:iconTintMode="multiply" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:onClick="iniciarSesionGoogle"
            android:text="@string/continuar_google"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:backgroundTint="@color/boton_google"
            app:icon="@drawable/google_icon"
            app:iconTint="@color/boton_google"
            app:iconTintMode="multiply" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/no_cuenta"
                android:textColor="@color/Olvidado_contraseña_color" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="onRegisterClick"
                android:text="@string/registrarse"
                android:textColor="@color/forgot" />


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>